--- a/assets/scss/pages/_login.scss
+++ b/assets/scss/pages/_login.scss
@@ -42,5 +42,11 @@ $txt-color: rgb(117, 117, 117);
         }
 
         button:hover {@include ShoppingButtonHover()}
+
+        .input-sign-form { margin-top: 25px;}
+
+        .selct-form-sign { outline: none;}
+        
+        .selct-label-form-sign { margin-top: 30px;}
     }
 }
